--- a/_includes/features.html
+++ b/_includes/features.html
@@ -3,8 +3,8 @@
     <hr id='{{ feature.id }}'>
 
     <section>
-      <img class='{% cycle 'pull-right', 'pull-left' %}' src='{{ feature.image }}'>
-      <h2>{{ feature.heading }}<span>{{ feature.subheading }}</span></h2>
+      <img alt='{{ feature.subheading }}' class='{% cycle 'pull-right', 'pull-left', %}' src='{{ feature.image }}'>
+      <h2>{{ feature.heading }}<!--<span>{{ feature.subheading }}</span>--></h2>
       <div class='lead'>{{ feature.content }}</div>
     </section>
   {% endfor %}
