--- a/assets/_sass/_main.scss
+++ b/assets/_sass/_main.scss
@@ -1,6 +1,14 @@
 main {
   hr { margin: 80px 0; }
-  section { overflow: hidden; }
+  section {
+    overflow: hidden;
+
+    img {
+      width: 500px;
+      height: 500px;
+      object-fit: cover;
+    }
+  }
 
   img {
     @extend .img-circle;
